# 2_2_2SomaForLacoReducao

./: CMakeLists.txt  SomaForLacoReducao.cpp
